fix overflow numbers

--- a/client/src/styles/_editor.scss
+++ b/client/src/styles/_editor.scss
@@ -29,8 +29,9 @@
 
 .block-nb
 {
-    position: absolute;
+    position: relative;
     margin-left: -70px;
+    padding-right: 70px;
     font-size: 1.2em;
 }
 
